styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: 'Walbaum Display Light';
    src: url('/fonts/Walbaum60ptLight.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Satista';
    src: url('/fonts/Satista.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}


body {
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}


/* class for mobile responsive content container */
.centered-container {
    @apply w-full flex flex-col items-center justify-center space-y-8 p-5 md:p-8 xl:p-12 xl:space-y-10;
}

.body-text {
    @apply  text-xl leading-6 lg:text-2xl font-garamond;
}

.body-text-styled {
    @apply text-xl leading-6 lg:text-2xl font-walbaum;
}

.body-text-satista {
    @apply text-lg lg:text-2xl font-satista;
}

.header-text {
    @apply text-4xl lg:text-5xl whitespace-pre-wrap font-walbaum;
}

.subheader-text {
    @apply text-3xl leading-normal whitespace-pre-wrap font-garamond lg:leading-relaxed;

}

.subtitle-text {
    @apply text-xl lg:text-2xl leading-normal whitespace-pre-wrap font-garamond lg:leading-relaxed;
}

.subtitle-text-smaller {
    @apply text-lg lg:text-xl leading-normal whitespace-pre-wrap font-garamond lg:leading-relaxed;
}

.subheader-text-styled {
    @apply text-2xl lg:text-3xl leading-normal whitespace-pre-wrap font-walbaum lg:leading-relaxed;

}

.contact-form-input {
    @apply block w-full bg-gray-200 text-gray-700 border py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white;
}

.two-tone-button {
    @apply border border-black py-3 px-12 transition-colors duration-200 bg-contrast-bg hover:bg-primary hover:text-text-contrast text-base lg:text-xl font-garamond;
}

.truncate-lines {
    display: -webkit-box;
    -webkit-line-clamp: 5;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.truncate-lines-small {
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.truncate-lines-smaller {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.custom-portable-text ul {
    list-style: disc;
    padding-left: 1.5em;
    margin-bottom: 0;
}

.custom-portable-text ol {
    list-style: decimal;
    padding-left: 1.5em;
}

.custom-portable-text li {
    margin-bottom: .5em;
}
  

